try to ensure no overflow on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,10 +3,10 @@ body {
     margin: 0px;
     overflow: hidden;
     overscroll-behavior-y: contain;
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    max-height: 100%;
+    width: 100vw;
+    max-width: 100vw;
+    height: 100vh;
+    max-height: 100vh;
 }
 
 html {
